--- a/templates/vite-react/index.html
+++ b/templates/vite-react/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- IMPORTANT: Use relative path ./src/main.tsx, NOT absolute path /src/main.tsx -->
+    <!-- Используем относительный путь для корректной работы и в dev и в production -->
     <script type="module" src="./src/main.tsx"></script>
   </body>
 </html> 
