--- a/templates/vite-react/index.html
+++ b/templates/vite-react/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shipvibes Project</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <!-- Используем относительный путь для корректной работы и в dev и в production -->
-    <script type="module" src="./src/main.tsx"></script>
-  </body>
-</html> 
+  <html lang="en">
+
+    <head>
+      <meta charset="UTF-8" />
+      <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Shipvibes Project</title>
+    </head>
+
+    <body>
+      <div id="root"></div>
+      <script type="module" src="/src/main.tsx"></script>
+    </body>
+
+  </html>
